compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__error.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Error(1) }"
---
----- SOURCE CODE
pub fn main() { Error(1) }

----- COMPILED JAVASCRIPT
import { Error } from "../gleam.mjs";

export function main() {
  return new Error(1n);
}
