compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "pub fn main() { Ok(1) }"
---
----- SOURCE CODE
pub fn main() { Ok(1) }

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function main() {
  return new Ok(1n);
}
