compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__results__qualified_ok.snap
---
source: compiler-core/src/javascript/tests/results.rs
expression: "import gleam\npub fn main() { gleam.Ok(1) }"
---
----- SOURCE CODE
import gleam
pub fn main() { gleam.Ok(1) }

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";

export function main() {
  return new $gleam.Ok(1n);
}
